# sangam

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  package-lock.json  vercel.json
.github/workflows/: cd-contracts.yml  cd-frontend.yml  ci-contracts.yml  ci-frontend.yml
contracts/chit-fund/: Cargo.toml
contracts/chit-fund/src/: chit_fund.rs  lib.rs  randomness.rs  storage.rs  test.rs
contracts/chit-fund/test_snapshots/test/: test_activate_before_full_fails.1.json  test_commit_reveal_and_claim.1.json  test_deposit_before_activate_fails.1.json  test_deposit_success.1.json  test_double_deposit_fails.1.json  test_fund_lifecycle.1.json  test_join_after_activate_fails.1.json  test_join_when_full_fails.1.json  test_non_organizer_activate_fails.1.json  test_wrong_deposit_amount_fails.1.json
frontend/: .vade-report  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
frontend/src/app/create/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/dashboard/_components/: ActionPanel.tsx  (+7 more)
frontend/src/components/: Navbar.tsx
frontend/src/components/landing/: FAQ.tsx  Footer.tsx  HeroSection.tsx  HowItWorks.tsx  Roadmap.tsx  TrustSafety.tsx
frontend/src/components/wallet/: ConnectButton.tsx  WalletProvider.tsx
frontend/src/hooks/: useInView.ts
frontend/src/lib/: contract.ts  stellar.ts  supabase.ts
frontend/src/types/: index.ts
frontend/supabase/: config.toml
frontend/supabase/supabase/migrations/: 20260630115019_create_users_table.sql
(+5 files in other folders)
